# computer_graphics

./: CMakeLists.txt  README.md  main.cpp
include/: skybox.hpp  sphere.hpp  util.hpp
libraries/lib/: glad.c
shader/: shader_frag.glsl  shader_vert.glsl
src/: skybox.cpp  sphere.cpp  util.cpp
